# traffic-light-fsm-cpp20

./: CMakeLists.txt  README.md
docs/: architecture.md
src/: Config.hpp  EmergencySensor.cpp  EmergencySensor.hpp  HardwareAbstraction.hpp  Logger.cpp  Logger.hpp  NightMode.hpp  PedestrianButton.cpp  PedestrianButton.hpp  StateMachine.hpp  Timer.cpp  Timer.hpp  TrafficLightController.cpp  TrafficLightController.hpp  main.cpp
tests/: test_fsm.cpp
